--- a/Css/css3.css
+++ b/Css/css3.css
@@ -18,10 +18,10 @@
     height: 30px;
 }
 .exit{
-    background-color: blue;
+    background-color: red;
     margin: 0;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
 }
 .rowContainer {
     display: flex;
